--- a/PatientMonitor/PatientMonitor.csproj
+++ b/PatientMonitor/PatientMonitor.csproj
@@ -87,11 +87,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Ali_Database_DataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Ali_Database_DataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="BedsideMonitoring.xaml.cs">
       <DependentUpon>BedsideMonitoring.xaml</DependentUpon>
     </Compile>
     <Compile Include="CentralMonitroingSystem.xaml.cs">
       <DependentUpon>CentralMonitroingSystem.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Employee Login.xaml.cs">
+      <DependentUpon>Employee Login.xaml</DependentUpon>
     </Compile>
     <Compile Include="IPatientData.cs" />
     <Compile Include="IPatientFactory.cs" />
@@ -112,6 +120,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="CentralMonitroingSystem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Employee Login.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -163,6 +175,17 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="Ali_Database_DataSet.xsc">
+      <DependentUpon>Ali_Database_DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Ali_Database_DataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Ali_Database_DataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Ali_Database_DataSet.xss">
+      <DependentUpon>Ali_Database_DataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
