--- a/TestPatientMonitor/TestPatientMonitor.csproj
+++ b/TestPatientMonitor/TestPatientMonitor.csproj
@@ -33,7 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Moq, Version=4.2.1507.118, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.2.1507.0118\lib\net40\Moq.dll</HintPath>
       <Private>True</Private>
@@ -54,12 +56,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestAddPatient.cs" />
     <Compile Include="TestAlarmTester.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="TestPatientAlarmer.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="TestPatientCreation.cs" />
     <Compile Include="TestPatientData.cs">
       <SubType>Code</SubType>
     </Compile>
