--- a/PatientMonitor/PatientMonitor.csproj
+++ b/PatientMonitor/PatientMonitor.csproj
@@ -111,6 +111,11 @@
     <Compile Include="PatientClassesEnumeration.cs" />
     <Compile Include="PatientMonitoringController.cs" />
     <Compile Include="PatientFactory.cs" />
+    <Compile Include="testDatabaseDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>testDatabaseDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="UpDown.xaml.cs">
       <DependentUpon>UpDown.xaml</DependentUpon>
     </Compile>
@@ -184,6 +189,17 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="testDatabaseDataSet.xsc">
+      <DependentUpon>testDatabaseDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="testDatabaseDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>testDatabaseDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="testDatabaseDataSet.xss">
+      <DependentUpon>testDatabaseDataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Mutable.wav" />
@@ -193,6 +209,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="database.accdb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="testDatabase.accdb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
