--- a/TestPatientMonitor/TestPatientMonitor.csproj
+++ b/TestPatientMonitor/TestPatientMonitor.csproj
@@ -48,6 +48,9 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Data" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDependentAssemblyPaths Condition=" '$(VS100COMNTOOLS)' != '' " Include="$(VS100COMNTOOLS)..\IDE\PrivateAssemblies">
@@ -55,6 +58,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LoginTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestAddPatient.cs" />
     <Compile Include="TestAlarmTester.cs">
@@ -63,7 +67,6 @@
     <Compile Include="TestPatientAlarmer.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="TestPatientCreation.cs" />
     <Compile Include="TestPatientData.cs">
       <SubType>Code</SubType>
     </Compile>
